Fix extra margins caused by inline-block

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -181,8 +181,7 @@ input.enterBounds {
     font: inherit;
 }
 
-a.channelPfpLink {    
-    margin-right: 5px;
+a.channelPfpLink {
     margin-top: 5px;
     display:inline-block;
     vertical-align: top;
